# spelling

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  test_bin.rs
