[package]
name = "spelling"
version = "0.2.2"
authors = ["frogtd <31412003+frogtd@users.noreply.github.com>"]
edition = "2018"
license = "Unlicense"
repository = "https://github.com/frogtd/spelling/"
readme = "README.md"
description = "A spellchecker using the Levenshtein distance as the heuristic for distance."
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.5"

[features] 
use_rayon = []