[package]
name = "spelling"
version = "1.0.0"
authors = ["frogtd <31412003+frogtd@users.noreply.github.com>"]
edition = "2024"
license = "Unlicense"
repository = "https://github.com/frogtd/spelling/"
readme = "README.md"
description = "A spellchecker using the Levenshtein distance as the heuristic for distance."
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = {version = "1.5", optional = true }

[features] 
default = ["use_rayon"]
use_rayon = ["rayon"]